added login and forgot-password api
